--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		</div>
 	</div>
 	<div class="win-image">
-		<p class="win-text">You win!!!</p>
+		<p class="win-text">You won!!!</p>
 	</div>
 </body>
 <script src="js/main.js"></script>
